--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,8 @@ nav h1 a {
   padding: 30px 15px 60px;
   text-align: center;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap: wrap;
 	align-items: center;
 }
 #restaurants-list li {
@@ -275,4 +276,115 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/* ====================== Media Queries ====================== */
+
+@media all and (max-width: 639px) {
+  .filter-options {
+    text-align: left;
+  }
+	.inside #footer {
+		bottom: 0;
+		position: absolute;
+		width: 45%;
+	}
+	#breadcrumb {
+		width: calc(50% - 80px);
+	}
+	#restaurant-img {
+		width: 90%;
+	}
+	#restaurant-container {
+		width: 45%;
+		padding: 140px 40px 30px;
+	}
+	#restaurants-list li {
+		width: 100%;
+	}
+	#reviews-container {
+		width: 45%;
+		padding: 10px 10px;
+	}
+	#reviews-list li {
+		width: 85%;
+	}
+}
+
+@media (min-width: 640px) and (max-width: 929px){
+  #restaurants-list li {
+    max-width: 42%;
+  }
+  #restaurants-list li h1 {
+    height: 35px;
+  }
+	#reviews-list li {
+    width: 85%;
+  }
+	#restaurant-container {
+		width: 45%;
+		padding: 140px 40px 30px;
+		display: inline-grid;
+	}
+	#reviews-container {
+		width: 45%;
+		padding: 40px 30px;
+	}
+	.inside #footer {
+		bottom: 0;
+		position: absolute;
+		width: 45%;
+	}
+}
+
+@media (min-width: 930px) {
+  #restaurants-list li {
+    max-width: 30%;
+  }
+  #restaurants-list p {
+    width: 66%;
+  }
+  #restaurants-list li h1 {
+    height: 41px;
+  }
+
+  .inside header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  .inside #map-container {
+    background: blue none repeat scroll 0 0;
+    height: 88%;
+    position: fixed;
+    right: 0;
+    top: 80px;
+    width: 50%;
+  }
+  #breadcrumb {
+    width: calc(50% - 80px);
+  }
+  #restaurant-img {
+    width: 90%;
+  }
+  #restaurant-container {
+    width: 45%;
+    padding: 140px 40px 30px;
+  }
+  #reviews-container {
+    width: 45%;
+    padding: 40px 30px;
+  }
+  #restaurant-cuisine {
+    width: 90%;
+  }
+  #reviews-list li {
+    width: 85%;
+  }
+  .inside #footer {
+    bottom: 0;
+    position: absolute;
+    width: 45%;
+  }
 }
